// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tickerExternalAgentActions should filter by caller DID 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [],
  },
}
`;

exports[`tickerExternalAgentActions should filter by event id 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [],
  },
}
`;

exports[`tickerExternalAgentActions should filter by pallet name 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [],
  },
}
`;

exports[`tickerExternalAgentActions should return the transactions for ticker 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;
